// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lowerCase() should fail 1`] = `
Object {
  "children": null,
  "message": "Value should be in lowercase",
  "path": "",
}
`;

exports[`lowerCase() should support custom message 1`] = `
Object {
  "children": null,
  "message": "Custom message",
  "path": "",
}
`;
